--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-    <pre id="output ">Carregando dados do repositório... </pre>
+    <pre id="output">Carregando dados do repositório... </pre>
     <script>
-        async function fetchGitHubFiles(owner, repo, path = ' ') {
+        async function fetchGitHubFiles(owner, repo, path = '') {
             const apiUrl = `https://api.github.com/repos/${owner}/${repo}/contents/${path}`;
             const response = await fetch(apiUrl);
             if (!response.ok) {
@@ -19,7 +19,7 @@
             const files = [];
             for (const item of items) {
                 if (item.type === 'file') {
-                    const extension = item.name.split(' . ').pop().toLowerCase();
+                    const extension = item.name.split('.').pop().toLowerCase();
                     const ignoredExtensions = ['png', 'jpg', 'jpeg', 'gif', 'svg', 'webp', 'bmp', 'yml', 'yaml', 'pdf'];
                     if (ignoredExtensions.includes(extension)) {
                         continue;
@@ -37,7 +37,7 @@
                     } catch (error) {
                         console.error(`Erro ao baixar arquivo ${item.path}:`, error);
                     }
-                } else if (item.type === 'dir ') {
+                } else if (item.type === 'dir') {
                     const subFiles = await fetchGitHubFiles(owner, repo, item.path);
                     files.push(...subFiles);
                 }
@@ -47,8 +47,8 @@
         }
         async function startCrawler() {
             const owner = 'PedroHenrique910'; // Define o proprietário (owner ) do repositório // < - - - coloque o owner aqui
-            const repo = 'https://github.com/PedroHenrique910/seu-projeto-crawler'; // Define o nome do repositório // < - - - coloque o repositório aqui
-            const output = document.getElementById('output ');
+            const repo = 'seu-projeto-crawler'; // Define o nome do repositório // < - - - coloque o repositório aqui
+            const output = document.getElementById('output');
             try {
                 const files = await fetchGitHubFiles(owner, repo);
                 const finalJson = {
